--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,27 +13,32 @@
             text-align: center;
             margin-top: 20px;
         }
+
         .section-subtitle {
             text-align: center;
             color: #777;
             margin-bottom: 40px;
         }
+
         .icon-box {
             text-align: center;
             padding: 20px;
         }
+
         .icon-box i {
             font-size: 40px;
             color: #007bff;
         }
     </style>
 </head>
+
 <body>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"><img src="favicon-32x32.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -47,18 +53,21 @@
     <div id="carouselExample" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="d-flex justify-content-center align-items-center" style="height: 300px; background-color: #f0f0f0;">
-                    <img src="BANNER1.png" alt="Image 1">
+                <div class="d-flex justify-content-center align-items-center"
+                    style="height: 300px; background-color: #f0f0f0;">
+                    <a href="https://nikestrength.com"><img src="BANNER1.png" alt="Image 1"> </a>
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="d-flex justify-content-center align-items-center" style="height: 300px; background-color: #f0f0f0;">
-                    <img src="banner2.png" alt="Image 2">
+                <div class="d-flex justify-content-center align-items-center"
+                    style="height: 300px; background-color: #f0f0f0;">
+                    <a href="https://www.game.es"><img src="banner2.png" alt="Image 2"> </a>
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="d-flex justify-content-center align-items-center" style="height: 300px; background-color: #f0f0f0;">
-                    <img src="banner3.png" alt="Image 2">
+                <div class="d-flex justify-content-center align-items-center"
+                    style="height: 300px; background-color: #f0f0f0;">
+                    <a href="https://apple.es"><img src="banner3.png" alt="Image 3"> </a>
                 </div>
             </div>
         </div>
@@ -75,7 +84,8 @@
     <section>
         <div class="container text-center">
             <h2 class="section-title">TITULO 2</h2>
-            <p class="section-subtitle">Establish trust with your customers by reassuring them that the process is quick, simple, and lucrative.</p>
+            <p class="section-subtitle">Establish trust with your customers by reassuring them that the process is
+                quick, simple, and lucrative.</p>
             <div class="row">
                 <div class="col-md-4">
                     <div class="icon-box">
@@ -137,4 +147,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
+
 </html>
